<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_home"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/orders" />
        <item
            android:id="@+id/nav_sign_off"
            android:icon="@drawable/ic_exit_to_app"
            android:title="@string/sign_off">

        </item>

    </group>
</menu>